# pg_graphql

./: .dockerignore  .pre-commit-config.yaml  Makefile  docker-compose.yaml  project.env  pyproject.toml
dockerfiles/db/: Dockerfile
dockerfiles/graphiql/: index.html
dockerfiles/python/: Dockerfile
mike/: setup.sql
service/: main.py
service/adapters/: postgres.py
service/config/: _base.py  adapters.py  general.py  logging.conf
service/interfaces/: schemas.py
service/middleware/: requestlogger.py
service/migrations/: setup.sql
service/policies/: become_first_account.py  dump_session_attributes.py
service/routers/: application.py  graphql.py
service/static/: index.html
service/static/css/: graphiql.min.css  graphiql.min.css.map
service/static/js/: graphiql.min.js
