[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["mdconaway <mdconaway@noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
asyncpg = "^0.29.0"
fastapi-offline = "^1.7.1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
sqlalchemy = {extras = ["asyncio"], version ="^2.0.30"}

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
